--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "zod-prisma",
-	"version": "0.5.4",
-	"description": "A Prisma generator that creates Zod schemas for all of your models",
+	"name": "@mustaqimarifin/zod-prisma",
+	"version": "0.5.5",
+	"description": "Fork of Carter Grimmeisen's zod-prisma utility. Updated dependencies",
 	"license": "MIT",
-	"author": "Carter Grimmeisen",
-	"homepage": "https://github.com/CarterGrimmeisen/zod-prisma#readme",
+	"author": "Mustaqim Arifin",
+	"homepage": "https://github.com/mustaqimarifin/zod-prisma#readme",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/CarterGrimmeisen/zod-prisma.git"
+		"url": "https://github.com/mustaqimarifin/zod-prisma.git"
 	},
 	"bugs": {
-		"url": "https://github.com/CarterGrimmeisen/zod-prisma/issues"
+		"url": "https://github.com/mustaqimarifin/zod-prisma/issues"
 	},
 	"main": "dist/index.js",
 	"module": "dist/zod-prisma.esm.js",
@@ -48,41 +48,34 @@
 			"react-hooks/rules-of-hooks": "off"
 		}
 	},
-	"jest": {
-		"testEnvironment": "node"
-	},
 	"dependencies": {
-		"@prisma/generator-helper": "~3.8.1",
+		"@prisma/generator-helper": "~6.0.1",
 		"parenthesis": "^3.1.8",
-		"ts-morph": "^13.0.2"
+		"ts-morph": "^24.0.0"
 	},
 	"devDependencies": {
-		"@prisma/client": "~3.8.1",
-		"@prisma/sdk": "~3.7.0",
-		"@tsconfig/recommended": "^1.0.1",
-		"@types/fs-extra": "^9.0.13",
-		"dts-cli": "^1.1.5",
-		"execa": "^5.1.0",
-		"fast-glob": "^3.2.5",
-		"fs-extra": "^10.0.0",
-		"husky": "^7.0.4",
-		"jest-mock-extended": "^2.0.4",
-		"prisma": "^3.4.2",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.4",
-		"zod": "^3.11.6"
+		"@prisma/client": "~6.0.1",
+		"@prisma/sdk": "~4.0.0",
+		"@tsconfig/recommended": "^1.0.8",
+		"@types/fs-extra": "^11.0.4",
+		"dts-cli": "^2.0.5",
+		"execa": "^9.5.2",
+		"fast-glob": "^3.3.2",
+		"fs-extra": "^11.2.0",
+		"husky": "^9.1.7",
+		"prisma": "^6.0.1",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"zod": "^3.24.0"
 	},
 	"peerDependencies": {
-		"decimal.js": "^10.0.0",
-		"prisma": "^3.0.0",
+		"decimal.js": "latest",
+		"prisma": "^6.0.0",
 		"zod": "^3.0.0"
 	},
 	"peerDependenciesMeta": {
 		"decimal.js": {
 			"optional": true
 		}
-	},
-	"engines": {
-		"node": ">=14"
 	}
 }
