--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"importHelpers": true,
 		"declaration": true,
 		"strict": true,
+				"sourceMap": false,
 		"strictNullChecks": false,
 		"rootDir": "./src",
 		"noImplicitReturns": true,
@@ -19,11 +20,8 @@
 		"noUnusedParameters": true,
 		"moduleResolution": "node10",
 		"esModuleInterop": true,
-		
 		"skipLibCheck": true,
-		
 		"forceConsistentCasingInFileNames": true,
-		
 		"noEmit": true,
 		"downlevelIteration": true,
 		"resolveJsonModule": true,
